<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="quovadis_title">quovadis</string>
    <string name="load_cat">Загрузить кота</string>
    <string name="cat_picture">Картинка кота</string>
    <string name="cat_says">Кот говорит…</string>
    <string name="cat_responds">Кот вернёт HTTP код…</string>
    <string name="what_does_the_cat_say">Что скажет кот?</string>
    <string name="what_http_code_does_the_cat_send">Какой HTTP код вернёт кот?</string>
    <string name="http_cat_api">HttpCats API</string>
    <string name="cataas_api">CatAaS API</string>
    <string name="use_vpn">Включи VPN</string>
    <string name="api_mode">Выбор API:</string>

    <color name="green_body">#8BC34A</color>
    <color name="green_stroke">#638A35</color>
</resources>